# tech-challenge

./: .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
docs/: backend.md  frontend.md  installation_requirements.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/branding/: branding.json
frontend/components/: image-classification-product-cards.tsx  image-classification.tsx  image-dropzone.tsx  navbar-links.tsx  navbar.tsx  typography.tsx
frontend/lib/: config.ts  image-classification.types.ts
lens-gpt-backend/: .env.sample  Dockerfile  README.md  pyproject.toml
lens-gpt-backend/lens_gpt_backend/: api.py  config.py  gpt_call.py  lens_scape.py  main.py  processing.py
lens-gpt-backend/lens_gpt_backend/app/: scrape_android.py
lens-gpt-backend/lens_gpt_backend/consumer/: cache_consumer.py  consumer.py  generator_consumer.py  producer_consumer.py  puhs_client_consumer.py
lens-gpt-backend/lens_gpt_backend/generators/: generators.py  model_producer.py  producer_website.py
lens-gpt-backend/lens_gpt_backend/producer/: android_lens_links_producer.py  lens_links_producer.py  model_information_producer.py  model_producer.py  price_producer.py  producer.py  producer_website.py  second_hand_offer_producer.py
lens-gpt-backend/lens_gpt_backend/scrape_second_hand/: scape_ebay.py  scape_second_hand.py
lens-gpt-backend/lens_gpt_backend/utils/: accept_cookies.py  chat_gpt.py  driver_pool.py  google_search.py  img_utils.py  product.py  result_queue.py  upstream_generator.py  utils.py
lens-gpt-backend/templates/: index.html
lens-gpt-backend/tests/producer/: test_second_hand_offer_producer.py
lens-gpt-backend/tests/util/: result_queue_test.py
