[tool.poetry]
name = "lens-gpt-backend"
version = "0.1.0"
description = ""
authors = ["Anton Kluge <anton.kluge@tum.de>", "Leon Staufer <leon.staufer@tum.de>",
    "Anton Wyrowski <anton.wyrowski@tum.de", "Ashima Grewal <ashima.grewal@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
selenium = "^4.20.0"
openai = "^1.28.1"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
webdriver-manager = "^4.0.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
httpx = "^0.27.0"
parsel = "^1.9.1"
nested-lookup = "^0.2.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
