[tool.poetry]
name = "lens-gpt-backend"
version = "0.1.0"
description = ""
authors = ["Anton Kluge <anton.kluge@tum.de>", "Leon Staufer <leon.staufer@tum.de>",
    "Anton Wyrowski <anton.wyrowski@tum.de", "Ashima Grewal <ashima.grewal@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
selenium = "^4.21.0"
openai = "^1.30.5"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
webdriver-manager = "^4.0.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
httpx = "^0.27.0"
parsel = "^1.9.1"
nested-lookup = "^0.2.25"
flask-sse = "^1.0.0"
gunicorn = "^22.0.0"
gevent = "^24.2.1"
mypy = "^1.10.0"
pylint = "^3.2.2"
flake8 = "^7.0.0"
types-requests = "^2.32.0.20240523"
appium-python-client = "^4.0.0"
shapely = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pylint.'MESSAGES CONTROL']
# Disable the message, report, category or checker with the given id(s).
disable = [
    "C0114",
    "C0115",
    "C0116",
]

[tool.flake8]
max-line-length = 110
ignore = [
    "E203",
    "E266",
    "E501",
    "W503"
]